Tiny fix in order to avoid annoying "jump" upon opening toc list on mobile.

--- a/less/stb-layout.less
+++ b/less/stb-layout.less
@@ -95,8 +95,12 @@ img.editor-image-left {
     
 .toc-list ul.items > li {
   list-style-type: none;
+}
+
+.toc-list ul.items > li:not(:first-child) {
   margin-top: 10px; 
 }
+
 // End of styling for toc lists on article pages 
 
 
